# uniskope

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: dashboard.py  events.py  health.py  users.py  webhooks.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: __init__.py  entitlement.py  event.py  state_transition.py  subscription.py  user.py
backend/app/repositories/: dashboard.py  event.py  user.py
backend/app/schemas/: events.py  users.py
backend/app/services/: state_resolver.py  webhook.py
backend/tests/: conftest.py  test_health.py
docs/: REQUIREMENT.md  SERVICE_SPEC.md
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: index.css
frontend/src/api/: client.ts
frontend/src/pages/: Dashboard.tsx
openspec/: project.md
openspec/changes/archive/2026-01-31-add-core-capabilities/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-31-add-core-capabilities/specs/dashboard/: spec.md
openspec/changes/archive/2026-01-31-add-core-capabilities/specs/event-store/: spec.md
openspec/changes/archive/2026-01-31-add-core-capabilities/specs/public-api/: spec.md
openspec/specs/dashboard/: spec.md
openspec/specs/event-store/: spec.md
openspec/specs/public-api/: spec.md
openspec/specs/state-resolver/: spec.md
openspec/specs/webhook-ingest/: spec.md
(+2 files in other folders)
